--- a/snake-frontend/.github/workflows/deploy-static-site.yml
+++ b/snake-frontend/.github/workflows/deploy-static-site.yml
@@ -22,5 +22,5 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'snakewatergun-frontend' # your App Service name
-          package: '.'
+          package: 'snake-frontend'
 
